# convolutional_neural_network

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.py
.github/workflows/: python-app.yml
cnn/: __init__.py  main.py
cnn/config/: settings.py
cnn/training/: callbacks.py  metrics.py  trainer.py
cnn/utils/: __init__.py  logging.py  visualization.py
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  usage.rst
src/: .coveragerc  .pre-commit-config.yaml  config.py  data_loader.py  examples.py  main.py  models.py  pyproject.toml  restructure.py  trainer.py  utils.py  verify_model.py  visualization.py
src/unitests/: test_data_loader.py  test_main.py  test_models.py  test_trainer.py  test_utils.py  test_verify_model.py  test_visualization.py
